main-menu (1.22) UNRELEASED; urgency=low

  [ Joey Hess ]
  * Fix test for new menu items that come before the last successful item.
    It's ok to jump up the menu to run such new items. Closes: #444462
  * Fix NEVERDEFAULT test. Closes: #277743

 -- Joey Hess <joeyh@debian.org>  Fri, 28 Sep 2007 21:12:56 -0400

main-menu (1.21) unstable; urgency=low

  [ Colin Watson ]
  * Fix a few memory leaks in corner cases.

  [ Jérémy Bobbio ]
  * Fix a memory leak in show_main_menu().  (Closes: #438121)
    Thanks to Masami Ichikawa for the patch!
  * Do not raise the priority when cdebconf-priority succeed.
    (Closes: #331679)

  [ Updated translations ]
  * Bengali (bn.po) by Jamil Ahmed
  * Danish (da.po) by Claus Hindsgaul
  * Italian (it.po) by Stefano Canepa
  * Portuguese (pt.po) by Miguel Figueiredo
  * Swedish (sv.po) by Daniel Nylander
  * Vietnamese (vi.po) by Clytie Siddall

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 25 Sep 2007 23:50:06 +0200

main-menu (1.20) unstable; urgency=low

  * Remove rather redundant extended description of main menu question.
    The title contains the same information.
  * Reset debconf title when displaying a failure message, otherwise the title
    could be left set to an intermediate value.

 -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2007 18:47:17 -0400

main-menu (1.19) unstable; urgency=low

  [ Colin Watson ]
  * Avoid suppressing menu items that have never been seen before just
    because they have a lower menu item number than the last successful item
    (closes: #288053).
  * Restore previous default priority when selecting a menu item (other than
    neverdefault items) immediately after backing up to the main menu.

  [ Joey Hess ]
  * Increase NEVERDEFAULT to 90000.

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:25:07 -0400

main-menu (1.18) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Tapio Lehtonen
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A
