@@ -27,6 +27,7 @@ binary-arch: build install
 	dh_installdebconf
 	dh_compress
 	dh_fixperms
+	dh_strip
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
