@@ -4,8 +4,11 @@ main-menu (1.22) UNRELEASED; urgency=low
   * Fix test for new menu items that come before the last successful item.
     It's ok to jump up the menu to run such new items. Closes: #444462
   * Fix NEVERDEFAULT test. Closes: #277743
+  * Support DEB_BUILD_OPTIONS=nostrip. Closes: #437554
+  * Add a (lame) guard against infinite recursion in di_config_package.
+    Closes: #437323
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Sep 2007 21:12:56 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Sep 2007 23:45:20 -0400
 
 main-menu (1.21) unstable; urgency=low
 
